force-app/main/default/objects/conference360__Seat__c/fields/conference360__Contact__c.field-meta.xml
<CustomField>
    <fullName>conference360__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact related to this Seat. If there is an Attendee related to this Seat and that Attendee has a related Contact, this Contact lookup will be automatically set.</description>
    <inlineHelpText>The Contact related to this Seat. If there is an Attendee related to this Seat and that Attendee has a related Contact, this Contact lookup will be automatically set.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <type>Lookup</type>
</CustomField>