force-app/main/default/objects/conference360__Seat__c/fields/conference360__Name_from_Attendee__c.field-meta.xml
<CustomField>
    <fullName>conference360__Name_from_Attendee__c</fullName>
    <formula>conference360__Attendee__r.conference360__First_Name__c + &quot; &quot; +  conference360__Attendee__r.conference360__Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name (from Attendee)</label>
    <type>Text</type>
</CustomField>