force-app/main/default/objects/conference360__Seat__c/fields/conference360__Seat_Number2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Seat_Number2__c</fullName>
    <description>The number of this seat, if you using seat numbering. Auto-set if left blank, but can be overwritten if you use custom seat sequences, such as A, B, C. The format by default is 1, 2, 3.</description>
    <inlineHelpText>The number of this seat, if you using seat numbering. Auto-set if left blank, but can be overwritten if you use custom seat sequences, such as A, B, C. The format by default is 1, 2, 3.</inlineHelpText>
    <label>Seat Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>