force-app/main/default/objects/conference360__Seat__c/fields/conference360__Session_Attendee__c.field-meta.xml
<CustomField>
    <fullName>conference360__Session_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Attendee</label>
    <referenceTo>conference360__Session_Attendee__c</referenceTo>
    <relationshipLabel>Seats</relationshipLabel>
    <relationshipName>Seats</relationshipName>
    <type>Lookup</type>
</CustomField>