force-app/main/default/objects/conference360__Seat__c/fields/conference360__Table_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Table_Name__c</fullName>
    <formula>conference360__Table__r.conference360__Table_Name__c</formula>
    <label>Table Name</label>
    <type>Text</type>
</CustomField>