force-app/main/default/objects/conference360__Seat__c/listViews/conference360__All.listView-meta.xml
<ListView>
    <fullName>conference360__All</fullName>
    <columns>NAME</columns>
    <columns>conference360__Event__c</columns>
    <columns>conference360__Table__c</columns>
    <columns>conference360__Seat_Number2__c</columns>
    <columns>conference360__Attendee__c</columns>
    <columns>conference360__Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>